--- a/ResponsiveSite/style.css
+++ b/ResponsiveSite/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -5,12 +6,15 @@
 }
 #wrapper{
     height: 100vh;
+    width:100vw;
     display: grid;
     grid-template-columns: 25% 1fr;
     grid-template-rows: 1fr;
 }
 
 #left{
+    position: sticky;
+    overflow-x: hidden;
     background-color: rgb(14,5,47);
     grid-row-start: 1;
     grid-row-end: 2;
@@ -19,28 +23,18 @@
     grid-template-rows: repeat(3,1fr);
 }
 .logo{
+    position: relative;
     background-color: rgb(14,5,47);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    /* height: auto; */
-    /* overflow-x: hidden; */
-
-
+    overflow-x: hidden ;
 }
-.logo a{
-    height:50%;
-    width: 50%;
-    border: 1px solid ;
-}
+
 .logo img{
-    width:100%;
-    height: 100%;
+    position:absolute;
+    width:50%;
+    height: 50%;
+    right:25%;
     object-fit: cover;
-    margin-left: 35%;
-    border: 1px solid white;
-    
+    /* border: 1px solid white; */
 }
 
 .about{
@@ -74,12 +68,13 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    gap:10px;
     
 
 }
 .space i{
     color: black;
-    margin-right: 5%;
+    
 }
 .space i:hover{
     
@@ -87,6 +82,14 @@
 }
 
 #right{
-    background-color: blue;
-    grid-row:1/2;
+    background-color: rgb(14,5,47);
+    overflow-x: hidden;
 }
+#intro,#projects{
+    font-family: 'Poppins', sans-serif;
+    color:white;
+}
+#intro p,#projects p{
+    font-weight: 200;
+}
+
