--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,31 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 #wrapper{
+    max-width: 100vw;
     height:100vh;
     width:100vw;
     display:grid;
     grid-template-columns: 1fr;
     grid-template-rows: 56px 1fr;
+    background-image: url(bg.webp);
+    background-size:cover;
+    padding: 0 10px;
 }
 .header{
-    background-color: pink;
+    overflow-y: hidden;
+    background-color: transparent;
     grid-row-start: 1;
     grid-row-end: 2;
     display: grid;
     grid-template-columns: 40% 1fr;
-    grid-template-rows: 100%;
 }
 .name{
     grid-column-start: 1;
     grid-column-end: 2;
-    background-color: black;
+    background-color:transparent;
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
     /* padding-left: 12px; */
 }
 .name img{
@@ -34,22 +41,45 @@
 }
 .name a,.navbar a{
     text-decoration: none;
+    color:whitesmoke;
 }
 .navbar ul,li{
+
     list-style-type: none;
     display: inline;
     padding-right:12px;
 }
 .navbar{
+    /* grid-row-start: 1;
+    grid-row-end: 2; */
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    background-color: transparent;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
-.main{
-    background-color: antiquewhite;
+.navbar a:hover{
+    font-size:1.08em;
+}
+#home-main{
     grid-row-start: 2;
     grid-row-end: 3;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+    color: azure;
 }
+#home-main > p{
+    max-width: 50%;
+}
+
+/* #footer{
+    max-width: 100vw;
+    background-color: brown;
+    overflow:hidden auto;
+} */
 
 
 
