--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -13,13 +13,16 @@
     display:grid;
     grid-template-columns: 1fr;
     grid-template-rows: 56px 1fr;
-    background-image: url(bg.webp);
-    background-size:cover;
-    padding: 0 10px;
+    /* background-image: url(bg.webp);
+    background-size:cover; */
+    background: rgb(118,111,255);
+    background: linear-gradient(90deg, rgba(118,111,255,1) 10%, rgba(136,242,255,1) 90%);
+    /* padding: 0 10px; */
 }
 .header{
-    overflow-y: hidden;
-    background-color: transparent;
+    position: sticky;
+    background: rgb(118,111,255);
+    background: linear-gradient(90deg, rgba(118,111,255,1) 10%, rgba(136,242,255,1) 90%);
     grid-row-start: 1;
     grid-row-end: 2;
     display: grid;
@@ -33,6 +36,8 @@
     justify-content: flex-start;
     align-items: center;
     font-family: 'Poppins', sans-serif;
+    overflow:hidden;
+
     /* padding-left: 12px; */
 }
 .name img{
@@ -56,10 +61,12 @@
     font-weight: 300;
     grid-column-start: 2;
     grid-column-end: 3;
-    background-color: transparent;
+    /* background-color: transparent; */
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    overflow:hidden;
+
 }
 .navbar a:hover{
     font-size:1.08em;
@@ -69,17 +76,57 @@
     grid-row-end: 3;
     font-family: 'Poppins', sans-serif;
     font-weight: 200;
-    color: azure;
+    display:grid;
+    grid-template-columns: 1fr 65% 1fr;
+    grid-template-rows: 1fr;
+
+    
+
 }
-#home-main > p{
-    max-width: 50%;
-}
+/* #home-main > p{
+    max-width: 30%;
+} */
 
 /* #footer{
     max-width: 100vw;
     background-color: brown;
     overflow:hidden auto;
 } */
+/* @media only screen and (max-width: 600px) {
+    body {
+      background-size: contain;
+    }
+} */
+
+#content{
+    grid-column: 2/span 1;
+    height:85%;
+    background-color: white;
+    /* border: 1px solid black; */
+    border-radius: 20px;
+    margin: 3%;
+    display: grid;
+    grid-template-columns: 40% 1fr;
+}
+#content img{
+    object-fit: contain;
+}
+.image{
+    display: flex;
+    justify-content: flex-start;
+    overflow-y: hidden;
+}
+.intro p{
+    display: block;
+    text-align:center;
+}
+.intro{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
 
 
 
