--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -76,12 +76,8 @@
     grid-row-end: 3;
     font-family: 'Poppins', sans-serif;
     font-weight: 200;
-    display:grid;
-    grid-template-columns: 1fr 65% 1fr;
-    grid-template-rows: 1fr;
-
-    
-
+    display: flex;
+    justify-content: center;
 }
 /* #home-main > p{
     max-width: 30%;
@@ -99,24 +95,30 @@
 } */
 
 #content{
-    grid-column: 2/span 1;
+    width:65%;
     height:85%;
     background-color: white;
     /* border: 1px solid black; */
     border-radius: 20px;
     margin: 3%;
-    display: grid;
-    grid-template-columns: 40% 1fr;
+    display: flex;
+    justify-content: flex-start;
+    box-shadow: 5px 5px 5px skyblue;
+    
 }
 #content img{
-    object-fit: contain;
+    object-fit: cover;
+    /* height: 100%; */
+    /* image gets stretched if using */
+
 }
 .image{
     display: flex;
     justify-content: flex-start;
-    overflow-y: hidden;
+    /* overflow: hidden; */
 }
 .intro p{
+    line-height: 1.5em;
     display: block;
     text-align:center;
 }
@@ -126,6 +128,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    flex-shrink: 4;
 }
 
 
@@ -162,15 +165,15 @@
 } */
 
 
-.main{
+/* .main{
     background-color: pink;
     grid-row-start: 2;
     grid-row-end: 3;
 
-}
-.footer{
+} */
+/* .footer{
     background-color: aqua;
     grid-row-start:3;
     grid-row-end: 4;
 
-}
+} */
