--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -3,12 +3,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: smooth;
     overflow-x: hidden;
 }
 
 #wrapper{
     max-width: 100vw;
-    height:100vh;
+    height:fit-content;
     width:100vw;
     display:grid;
     grid-template-columns: 1fr;
@@ -68,7 +69,8 @@
 
 }
 .navbar a:hover{
-    font-size:1.08em;
+    color:rgb(0, 128, 255);
+    transition: 0.9s ease;
 }
 #home-main{
     grid-row-start: 2;
@@ -76,7 +78,9 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 200;
     display: flex;
+    flex-direction: row;
     justify-content: center;
+
 }
 /* #home-main > p{
     max-width: 30%;
@@ -94,45 +98,51 @@
 } */
 
 #content{
-    width:65%;
-    height:85%;
+    /* width:65%; */
+    /* height:85%; */
     background-color: white;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     border-radius: 20px;
     margin: 3%;
     display: flex;
-    justify-content: flex-start;
+    flex-direction: row;
+    justify-content: space-between;
+    /* flex-wrap: wrap; */
     box-shadow: 5px 5px 5px skyblue;
     
 }
 #content img{
     object-fit: cover;
+    max-height: 400px;
+    display: block;
+    overflow: hidden;
     /* height: 100%; */
     /* image gets stretched if using */
 
 }
-.image{
+/* .image{
     display: flex;
     justify-content: flex-start;
-    /* overflow: hidden; */
-}
+    flex-wrap: wrap;
+} */
 .intro p{
     line-height: 1.5em;
     display: block;
-    text-align:center;
 }
 .intro{
-    display: flex;
+    text-align: center;
+    align-self: center;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    flex-shrink: 4;
+    flex-shrink: 4; */
 }
 #wrapper2{
-    height: 40vh;
+  
     width: 100vw;
-    margin-top: 3vh;
+    padding-top: 20px;
     display: flex;
     justify-content: center;
     font-family: 'Poppins', sans-serif;
@@ -140,7 +150,7 @@
 }
 #about{
     width: 80vw;
-    height: 56vh;
+    /* height: 56vh; */
     background-color: white;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -159,15 +169,17 @@
     margin-bottom: 3%;
 }
 #aboutContent{
-    padding-right: 5%;
+    padding-right: 7%;
+}
+#skillsset{
+    padding-left: 7%;
 }
 #aboutContent p{
     padding-top: 5%;
+    text-align: justify;
 }
 
-#skillsset{
-    padding-left: 5%;
-}
+
 #skillsset h3{
     padding-bottom: 5%;
 }
@@ -198,6 +210,65 @@
     width: 60%; background: rgb(118,111,255);
     background: linear-gradient(90deg, rgba(118,111,255,1) 10%, rgba(136,242,255,1) 90%);
 } 
+/* Education */
+#wrapper3{
+  
+    width: 100vw;
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    /* flex-wrap: wrap; */
+    font-family: 'Poppins', sans-serif;
+    border: 1px solid black;
+}
+#eduexp{
+    width: 80vw;
+    /* height: 56vh; */
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+}
+#education{
+    padding-right: 7%;
+}
+#Experience{
+    padding-left: 7%;
+}
+
+
+
+
+@media screen and (max-width:400px){
+    #content{
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        height:fit-content;
+        padding : 0 auto;
+        margin-bottom: 3%;
+    }
+
+    #about,#eduexp{
+        display: flex;
+        flex-direction: column;
+        gap:20px;
+    }
+    #skillsset,#Experience{
+        padding-left: 0;
+        text-align: none;
+    }
+
+    #aboutContent,#wrapper2{
+        padding-top:0px;
+    }
+    #wrapper{
+        height: fit-content;
+    }
+}
+
+
+
 
 
 
