--- a/Portfolio/contact.css
+++ b/Portfolio/contact.css
@@ -3,17 +3,42 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: auto;
 }
 body{
     background: rgb(118,111,255);
     background: linear-gradient(90deg, rgba(118,111,255,1) 10%, rgba(136,242,255,1) 90%);
 }
+#wrapper{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #contact{
     font-family: Poppins,sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-color: white;
-    width: 30%;
-    border-radius: 15px;
+    /* width: 30%;
+    height: 40%; */
+    border-radius: 9px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding:20px;
 }
+#msg{
+    margin-left: 10px;
+    margin-top: 10px;
+    min-width: 20px;
+    min-height: 60px;
+}
+#submit{
+    justify-self: center;
+}
+#submit:hover{
+    background: rgb(118,111,255);
+    background: linear-gradient(90deg, rgba(118,111,255,1) 10%, rgba(136,242,255,1) 90%);
+    transition: 0.9s ease;
+}
+
