--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -23,11 +23,19 @@
 .header{
     background: rgb(118,111,255);
     background: linear-gradient(90deg, rgba(118,111,255,1) 10%, rgba(136,242,255,1) 90%);
+    /* background-color: aqua; */
+    position: fixed;
     grid-row-start: 1;
     grid-row-end: 2;
     display: grid;
-    grid-template-columns: 40% 1fr;
+    width: inherit;
+    grid-template-columns: 30% 1fr;
 }
+.main--name{
+    padding: 0 0 0 10px;
+}
+
+
 .name{
     grid-column-start: 1;
     grid-column-end: 2;
@@ -82,26 +90,12 @@
     justify-content: center;
 
 }
-/* #home-main > p{
-    max-width: 30%;
-} */
-
-/* #footer{
-    max-width: 100vw;
-    background-color: brown;
-    overflow:hidden auto;
-} */
-/* @media only screen and (max-width: 600px) {
-    body {
-      background-size: contain;
-    }
-} */
 
 #content{
     /* width:65%; */
     /* height:85%; */
     background-color: white;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 20px;
     margin: 3%;
     display: flex;
@@ -138,6 +132,18 @@
     align-items: center;
     flex-wrap: wrap;
     flex-shrink: 4; */
+}
+.para ul{
+    margin: 10px 0;
+}
+.fb{
+    color: #3b5998;
+}
+.twitter{
+    color:#00acee;
+}
+.linkedin{
+    color:#0A66C2;
 }
 #wrapper2{
   
@@ -264,15 +270,39 @@ a{
     justify-content: space-around;
     flex-wrap: wrap;
 }
+.hamburger{
+    padding-top: 2%;
+    display: none;
+}
 
 
 
 
 
-
+/* check navbar a      for navbar to block ,to inline using hamburger */
 @media screen and (max-width:400px){
     html{
         font-size:14px;
+    }
+    .navHam{
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: flex-start;
+    }
+    .navbar a{
+        display: block;
+        font-size: 12px;
+        display: none;
+        /* display: inline; */
+    }
+    .hamburger{
+        display: block;
+        padding-right: 20px;
+    }
+    .hamburger:hover{
+        color:dodgerblue;
     }
     #content{
         flex-direction: column;
@@ -308,7 +338,6 @@ a{
     }
     
 }
-
 
 
 
