--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -13,7 +13,7 @@
     width:100vw;
     display:grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 56px 1fr;
+    grid-template-rows: 64px 1fr;
     /* background-image: url(bg.webp);
     background-size:cover; */
     background: rgb(118,111,255);
@@ -27,12 +27,13 @@
     position: fixed;
     grid-row-start: 1;
     grid-row-end: 2;
-    display: grid;
+    display: flex;
+    justify-content: space-between;
     width: inherit;
     grid-template-columns: 30% 1fr;
 }
 .main--name{
-    padding: 0 0 0 10px;
+    padding: 11px 25px;
 }
 
 
@@ -45,7 +46,6 @@
     align-items: center;
     font-family: 'Poppins', sans-serif;
     overflow:hidden;
-
     /* padding-left: 12px; */
 }
 .name img{
@@ -57,10 +57,9 @@
     color:whitesmoke;
 }
 .navbar ul,li{
-
     list-style-type: none;
     display: inline;
-    padding-right:12px;
+    padding: 20px 12px;
 }
 .navbar{
     /* grid-row-start: 1;
@@ -71,6 +70,7 @@
     grid-column-end: 3;
     /* background-color: transparent; */
     display: flex;
+    flex-direction: row;
     justify-content: flex-end;
     align-items: center;
     overflow:hidden;
@@ -247,6 +247,9 @@
     width:10%;
     text-align: center;
 }
+.socials ul,.socials li{
+    padding: 10px 5px;
+}
 
 
 a{
@@ -269,7 +272,9 @@ a{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding: 15px 0;
 }
+
 .hamburger{
     padding-top: 2%;
     display: none;
@@ -279,8 +284,11 @@ a{
 
 
 
+
+
+
 /* check navbar a      for navbar to block ,to inline using hamburger */
-@media screen and (max-width:400px){
+@media screen and (max-width:768px){
     html{
         font-size:14px;
     }
@@ -288,8 +296,9 @@ a{
         display: flex;
         width: 100%;
         flex-direction: row;
-        justify-content: flex-end;
-        align-items: flex-start;
+        justify-content:flex-end ;
+        /* align-items: flex-start; */
+        
     }
     .navbar{
         display: none;
@@ -339,6 +348,7 @@ a{
     }
     .para1,.para2,.socials{
         width:fit-content;
+        padding: 10px 0;
     }
     
 }
