changes in calc

--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -12,7 +12,7 @@
     background: linear-gradient(90deg, rgba(118,111,255,1) 10%, rgba(136,242,255,1) 90%);
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
 }
 .calc{
     height: 400px;
