--- a/To-do_List/style.css
+++ b/To-do_List/style.css
@@ -57,6 +57,8 @@ td{
 #submitBtn{
     height:35px;
     width:100px;
+    padding: 5px;
+
     display: inline-block;
     /* padding: 1em 2em; */
     text-align: center;
@@ -73,8 +75,9 @@ td{
     background-position: left;
 }
 #deleteBtn{
-    height:35px;
+    height:40px;
     width:200px;
+    padding: 5px;
     display: inline-block;
     /* padding: 1em 2em; */
     text-align: center;
@@ -90,5 +93,12 @@ td{
     color:white;
     background-position: left;
 }
-
+.userTasks{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.deleteButton{
+    align-self: center;
+}
 
