--- a/React/shopping-list-app/src/index.css
+++ b/React/shopping-list-app/src/index.css
@@ -90,7 +90,7 @@ body{
  .itemName,.quantity{
   padding: 10px;
  }
- .submitBtn,.cancelBtn{
+ .submitBtn,.cancelBtn,.deleteSelectedBtn{
   background: #ddd;
   border: none;
   color: black;
@@ -113,19 +113,12 @@ body{
 .submitBtn:hover{
   background-color: lightgreen;
 }
-.cancelBtn:hover{
+.cancelBtn:hover,.deleteSelectedBtn:hover{
   background-color: rgb(248, 121, 121);
 }
 
- 
-
-
-
-
-
-
- /* CheckBox css */
- .cl-checkbox {
+/* checkbox css start */
+.cl-checkbox {
   position: relative;
   display: inline-block;
  }
@@ -145,18 +138,12 @@ body{
   width: 40px;
   height: 40px;
   background-color: rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   outline: none;
   opacity: 0;
-  -webkit-transform: scale(1);
-      -ms-transform: scale(1);
-          transform: scale(1);
+  transform: scale(1);
   pointer-events: none;
-  -webkit-transition: opacity 0.3s, -webkit-transform 0.2s;
-  transition: opacity 0.3s, -webkit-transform 0.2s;
   transition: opacity 0.3s, transform 0.2s;
-  transition: opacity 0.3s, transform 0.2s, -webkit-transform 0.2s;
  }
  
  /* Span */
@@ -170,8 +157,7 @@ body{
  .cl-checkbox > span::before {
   content: "";
   display: inline-block;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 3px 11px 3px 1px;
   border: solid 2px;
   /* Safari */
@@ -180,7 +166,6 @@ body{
   width: 18px;
   height: 18px;
   vertical-align: top;
-  -webkit-transition: border-color 0.2s, background-color 0.2s;
   transition: border-color 0.2s, background-color 0.2s;
  }
  
@@ -196,9 +181,7 @@ body{
   border: solid 2px transparent;
   border-right: none;
   border-top: none;
-  -webkit-transform: translate(3px, 4px) rotate(-45deg);
-      -ms-transform: translate(3px, 4px) rotate(-45deg);
-          transform: translate(3px, 4px) rotate(-45deg);
+  transform: translate(3px, 4px) rotate(-45deg);
  }
  
  /* Checked, Indeterminate */
@@ -220,9 +203,7 @@ body{
  
  .cl-checkbox > input:indeterminate + span::after {
   border-left: none;
-  -webkit-transform: translate(4px, 3px);
-      -ms-transform: translate(4px, 3px);
-          transform: translate(4px, 3px);
+  transform: translate(4px, 3px);
  }
  
  /* Hover, Focus */
@@ -241,13 +222,8 @@ body{
  /* Active */
  .cl-checkbox > input:active {
   opacity: 1;
-  -webkit-transform: scale(0);
-      -ms-transform: scale(0);
-          transform: scale(0);
-  -webkit-transition: opacity 0s, -webkit-transform 0s;
-  transition: opacity 0s, -webkit-transform 0s;
+  transform: scale(0);
   transition: transform 0s, opacity 0s;
-  transition: transform 0s, opacity 0s, -webkit-transform 0s;
  }
  
  .cl-checkbox > input:active + span::before {
@@ -279,4 +255,13 @@ body{
   background-color: currentColor;
  }
  
- /*checkbox end  */
+ /* checkbox css end */
+
+ 
+
+ 
+
+
+
+
+
