--- a/React/weather-api/src/index.css
+++ b/React/weather-api/src/index.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Poppins,sans-serif;
 }
 .searchBtn{
   background: none;
@@ -13,3 +15,12 @@
   justify-content: center;
   justify-content: baseline;
 }
+.mainBox{
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+.searchHistory{
+  align-self:baseline;
+}
+
