--- a/React/Redux/weather-api/src/index.css
+++ b/React/Redux/weather-api/src/index.css
@@ -50,3 +50,10 @@
   color: firebrick;
   text-decoration: underline;
 }
+.pageNotFound{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+}
