--- a/Next.js/quiz-app/styles/globals.css
+++ b/Next.js/quiz-app/styles/globals.css
@@ -14,6 +14,7 @@
   background-color: rgb(90, 90, 240);
   position: sticky;
   top: 0;
+  overflow-y: hidden;
 }
 
 .logo {
@@ -38,4 +39,39 @@
   width : 100vw;
   display: flex;
   justify-content: center;
+}
+.modalWrapper{
+  height: 90vh;
+  /* background-color: blanchedalmond; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.modal{
+  /* border: 1px solid black; */
+  height: 200px;
+  width: 200px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  border-radius: 7%;
+  /* box-shadow: 10px 10px 5px lightblue; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+.text{
+  margin-top: 20%;
+}
+.closeBtn{
+  height : 30px;
+  width : 30px;
+  /* border: 1px solid black; */
+  align-self: flex-end;
+  border-radius: 7%;
+
+}
+.closeBtn:hover{
+  background-color: rgb(255, 0, 0);
+  cursor: pointer;
 }
