--- a/Next.js/e-commerce-app/styles/globals.css
+++ b/Next.js/e-commerce-app/styles/globals.css
@@ -1,7 +1,70 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Poppins,sans-serif;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* .navbar{
+    width : 100vw;
+    background-color: #2874f0;
+    height : 56px;
+    box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 2px 1px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
+.logo{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    object-fit: cover;
+} */
+.navbar {
+    /* width: 100vw; */
+    height: 60px;
+    background-color: rgb(90, 90, 240);
+    position: sticky;
+    top: 0;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(5, 1fr);
+    /* overflow-y: hidden; */
+}
+
+.logo {
+    grid-area: 1/1/2/2;
+    object-fit: fill;
+    width: 100%;
+}
+.logoImg{
+    max-width: 100%;
+    max-height: 60px;
+    object-fit: cover;
+}
+.search{
+    grid-area: 1/2/2/4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.searchBar{
+    height : 35px;
+}
+.cart{
+    grid-area: 1/5/2/6;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.cartLogo{
+    max-height:50px;
+    object-fit: contain;
 }
