--- a/Next.js/e-commerce-app/styles/globals.css
+++ b/Next.js/e-commerce-app/styles/globals.css
@@ -7,24 +7,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Poppins, sans-serif;
 }
 
-/* .navbar{
-    width : 100vw;
-    background-color: #2874f0;
-    height : 56px;
-    box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 2px 1px 0 rgba(0, 0, 0, 0.19);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-}
-.logo{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    object-fit: cover;
-} */
+/* Navbar css */
 .navbar {
     /* width: 100vw; */
     height: 60px;
@@ -42,29 +28,72 @@
     object-fit: fill;
     width: 100%;
 }
-.logoImg{
+
+.logoImg {
     max-width: 100%;
     max-height: 60px;
     object-fit: cover;
 }
-.search{
+
+.search {
     grid-area: 1/2/2/4;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-.searchBar{
-    height : 35px;
+
+.searchBar {
+    height: 35px;
 }
-.cart{
+.loginBtn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart {
     grid-area: 1/5/2/6;
-    
+
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-.cartLogo{
-    max-height:50px;
+
+.cartLogo {
+    max-height: 50px;
     object-fit: contain;
+}
+
+/* product bar css */
+.productBar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    padding: 10px 0;
+}
+
+.electronics,
+.men,
+.women,
+.jewelery {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.menLogo {
+    padding-top: 10px;
+    height: 81px;
+    width: 81px;
+}
+
+.electronics:hover,
+.men:hover,
+.women:hover,
+.jewelery:hover {
+    color: rgb(90, 90, 240);
+    cursor: pointer;
 }
